--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,6 @@ and open the template in the editor.
     </head>
     <body>
         candy
-        <div>TODO write content</div>
+        <div>Hello kek</div>
     </body>
 </html>
